﻿$Rev$
[2007/08/23]
UliPad.py           Now you can set pythonpath option in config.ini/[default], 
                    and ulipad will insert it into the sys.path. pythonpath can 
                    be a string or a string list of directory.
                    
[2007/08/22]
Editor.py           Add Shift+Delete => Cut, Shift+Insert => Paste
mPyRun.py           Add new option in preference, [Python]->Automatically save modified file when running python program, if it's checked, it'll automatically save the modified file.
common.py LexerBase.py Fix print bug
mPrint.py Print.py  Fix print bug, add print line number functionality

[2007/08/21]
mako_plugin         Add mako template syntax highlight support

-------------------------------------- 3.7 -----------------------------
[2007/08/19]
                    Ready to release new version
                    
[2007/08/09]
mRegister.py        Fix register to explore bug

[2007/08/08]
                    Fix document NewEdit->UliPad
mFormat.py          Add Tab and Shift+Tab to menu item
winpdb module       Merge new 1.20 version into ulipad
                    
[2007/08/07]
mRecentFile.py      增加Alt+R给最近打开文件菜单

[2007/07/19]
DirBrowser.py       修正在文件浏览中无法使用光标键的bug

[2007/07/11]
mFtp.py             允许Ftp窗口在相应的面板打开，当通过面板右键菜单打开时

[2007/07/09]
RegexWindow.py      增加findall中正则式返回为tuple的list时的显示处理,对于tuple使用\t进行分割

[2007/06/25]
batchrenamefilenames_plugin
                    增加批量改名插件
                    
[2007/06/24]
mako_plugin mCommands.py
                    增加mako插件，将ESC键自动进入vim模式改为原来的处理方式。
                    
[2007/06/12]
mLexer.py           增加Lua语法设置

[2007/05/15]
                    增加繁体中文翻译文件 感谢：趙惟倫 <chaoweilun@gmail.com>
                    
[2007/05/10]
InputAssistant.py mInputassistant.py Editor.py
                    完善自动完成列表处理。可以响应EVT_STC_AUTOCOMP_SELECTION
                    事件。同时增加在acp中定义\b表示unindent功能。同时去掉{##}
                    的处理
                    解决多行文本添加时缩近的处理